--- a/training_noodles/specs/defaults.yml
+++ b/training_noodles/specs/defaults.yml
@@ -50,6 +50,8 @@ after_all_experiments: []
 
 # The default properties for each server
 server_default:
+  # Default name of the server
+  name: <default>
   # Path to the private key on local
   private_key_path: $HOME/.ssh/id_rsa
   # Port to connect
