turn off Jekyll

--- a/docs_source/Makefile
+++ b/docs_source/Makefile
@@ -21,8 +21,13 @@ livehtml:
 
 # Copy the files from "docs_source/_build/html/" to "docs/"
 publish:
+	# Remove the old publish directory
 	rm -rf $(PUBLISHDIR)
+	# Copy the files
 	cp -r $(BUILDDIR)/html $(PUBLISHDIR)
+	# Turn off Jekyll
+	# See: https://help.github.com/en/articles/files-that-start-with-an-underscore-are-missing
+	touch $(PUBLISHDIR)/.nojekyll
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
