--- a/training_noodles/specs/defaults.yml
+++ b/training_noodles/specs/defaults.yml
@@ -78,6 +78,9 @@ requirements:
   - "(grep 'cpu ' /proc/stat;sleep 0.1;grep 'cpu ' /proc/stat) | awk -v RS='' '{print ($13-$2+$15-$4)*100/($13-$2+$15-$4+$16-$5)}'"
   - "sleep 1.5"
   - "(grep 'cpu ' /proc/stat;sleep 0.1;grep 'cpu ' /proc/stat) | awk -v RS='' '{print ($13-$2+$15-$4)*100/($13-$2+$15-$4+$16-$5)}'"
+  # Get average CPU load over last 1 minute (Output: CPU load greater or equal to 0.0) (Reference: https://stackoverflow.com/a/24839903)
+  # Please note that CPU usage and load are two different concepts, please refer to https://estl.tech/cpu-usage-vs-load-ecca22287b21
+  cpu_load: awk '{print $1}' /proc/loadavg
   # Get memory usage (Output: A float between 0-100 (%)) (Reference: https://askubuntu.com/a/941997)
   memory_usage: awk '/MemTotal/{t=$2}/MemAvailable/{a=$2}END{print 100-100*a/t}' /proc/meminfo
   # Get disk usage (Output: A float between 0-100 (%)) (Reference: https://askubuntu.com/a/941997)
