--- a/examples/error_handling/spec.yml
+++ b/examples/error_handling/spec.yml
@@ -63,6 +63,9 @@ round_interval: 0
 # The interval to deploy each experiment in each round
 deployment_interval: 0
 
+# The interval to execute the commands
+commands_interval: 0
+
 ################################################################################
 # Error Handling
 ################################################################################
