--- a/examples/local_tmux/spec.yml
+++ b/examples/local_tmux/spec.yml
@@ -102,3 +102,6 @@ round_interval: 5
 
 # The interval to deploy each experiment in each round
 deployment_interval: 0
+
+# The interval to execute the commands
+commands_interval: 0
