--- a/examples/train_tensorflow_examples/spec.yml
+++ b/examples/train_tensorflow_examples/spec.yml
@@ -294,6 +294,9 @@ round_interval: 10
 # The interval to deploy each experiment in each round
 deployment_interval: 0
 
+# The interval to execute the commands
+commands_interval: 0.5
+
 ################################################################################
 # Error Handling
 ################################################################################
@@ -311,3 +314,22 @@ error_handlers:
   return_code: 0
   stderr_pattern: "^fatal: destination path 'TensorFlow-Examples' already exists and is not an empty directory\\.\\s+$"
   action: continue
+- name: Create an error marker file on both remote and local machines when unknown errors occurred
+  return_code: ".+"
+  stderr_pattern: "[\\S\\s]+"
+  commands:
+  - "touch ~/error.log"
+  - "local:touch $LOCAL_DIR/error.log"
+  action: abort
+
+################################################################################
+# Shell Commands
+################################################################################
+
+# Shell command to execute the commands read from the string
+# See: https://linux.die.net/man/1/bash
+shell_string: "bash -c"
+
+# Shell command to execute the commands read from the standard input (STDIN)
+# See: https://linux.die.net/man/1/bash
+shell_stdin: "bash -s"
