--- a/training_noodles/specs/defaults.yml
+++ b/training_noodles/specs/defaults.yml
@@ -2,7 +2,7 @@
 name: Default spec
 
 # Description of the spec
-description: |-
+description: >-
   All default settings are in this spec. Properties in user specs would inherit
   from these settings if user doesn't specify them.
 
@@ -96,9 +96,9 @@ requirements:
   # Get CUDA GPU utilization (Output: A float between 0-100 (%))
   # Reference: https://gist.github.com/jonatw/9322244
   cuda_gpu_utilization: "nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader,nounits | awk '{s+=$1; n++} END {print s/n}'"
-  # Get CUDA memory utilization (Output: A float between 0-100 (%))
-  # Reference: https://gist.github.com/jonatw/9322244
-  cuda_memory_utilization: "nvidia-smi --query-gpu=utilization.memory --format=csv,noheader,nounits | awk '{s+=$1; n++} END {print s/n}'"
+  # Get CUDA memory usage (Output: A float between 0-100 (%))
+  # Reference: https://nvidia.custhelp.com/app/answers/detail/a_id/3751/~/useful-nvidia-smi-queries
+  cuda_memory_usage: "nvidia-smi --query-gpu=memory.used,memory.total --format=csv,noheader,nounits | awk '{p=$1/$2; s+=p; n++} END {print s/n}'"
 
 ################################################################################
 # Deployment
